/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements. See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership. The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.custos.group.management.service;
option go_package = "./pb";

import "google/api/annotations.proto";
import "UserProfileService.proto";
import "IamAdminService.proto";


service GroupManagementService {

    rpc createKeycloakGroups (org.apache.custos.iam.service.GroupsRequest) returns (org.apache.custos.iam.service.GroupsResponse) {

        option (google.api.http) = {
           post: "/group-management/v1.0.0/keycloak/groups"
         };
    }


    rpc updateKeycloakGroup (org.apache.custos.iam.service.GroupRequest) returns (org.apache.custos.iam.service.GroupRepresentation) {

        option (google.api.http) = {
           put: "/group-management/v1.0.0/keycloak/group/{id}"
         };
    }

    rpc deleteKeycloakGroup (org.apache.custos.iam.service.GroupRequest) returns (org.apache.custos.iam.service.OperationStatus) {

        option (google.api.http) = {
           delete: "/group-management/v1.0.0/keycloak/group/{id}"
         };
    }

    rpc findKeycloakGroup (org.apache.custos.iam.service.GroupRequest) returns (org.apache.custos.iam.service.GroupRepresentation) {

        option (google.api.http) = {
           get: "/group-management/v1.0.0/keycloak/group"
         };
    }


    rpc getAllKeycloakGroups (org.apache.custos.iam.service.GroupRequest) returns (org.apache.custos.iam.service.GroupsResponse) {

        option (google.api.http) = {
           get: "/group-management/v1.0.0/keycloak/groups"
         };
    }

    rpc addUserToKeycloakGroup (org.apache.custos.iam.service.UserGroupMappingRequest) returns (org.apache.custos.iam.service.OperationStatus) {

        option (google.api.http) = {
           post: "/group-management/v1.0.0/keycloak/user/group/membership"
         };
    }


    rpc removeUserFromKeycloakGroup (org.apache.custos.iam.service.UserGroupMappingRequest) returns (org.apache.custos.iam.service.OperationStatus) {

        option (google.api.http) = {
           delete: "/group-management/v1.0.0/keycloak/user/group/membership"
         };
    }

    rpc createGroup (org.apache.custos.user.profile.service.GroupRequest) returns (org.apache.custos.user.profile.service.Group) {

        option (google.api.http) = {
           post: "/group-management/v1.0.0/group"
         };
    }


    rpc updateGroup (org.apache.custos.user.profile.service.GroupRequest) returns (org.apache.custos.user.profile.service.Group) {

        option (google.api.http) = {
           put: "/group-management/v1.0.0/group/{id}"
         };
    }

    rpc deleteGroup (org.apache.custos.user.profile.service.GroupRequest) returns (org.apache.custos.user.profile.service.Status) {

        option (google.api.http) = {
           delete: "/group-management/v1.0.0/group/{id}"
         };
    }

    rpc findGroup (org.apache.custos.user.profile.service.GroupRequest) returns (org.apache.custos.user.profile.service.Group) {

        option (google.api.http) = {
           get: "/group-management/v1.0.0/group"
         };
    }


    rpc getAllGroups (org.apache.custos.user.profile.service.GroupRequest) returns (org.apache.custos.user.profile.service.GetAllGroupsResponse) {

        option (google.api.http) = {
           get: "/group-management/v1.0.0/groups"
         };
    }

    rpc addUserToGroup (org.apache.custos.user.profile.service.GroupMembership) returns (org.apache.custos.user.profile.service.Status) {

        option (google.api.http) = {
           post: "/group-management/v1.0.0/user/group/membership"
         };
    }


    rpc removeUserFromGroup (org.apache.custos.user.profile.service.GroupMembership) returns (org.apache.custos.user.profile.service.Status) {

        option (google.api.http) = {
           delete: "/group-management/v1.0.0/user/group/membership"
         };
    }


    rpc addChildGroupToParentGroup (org.apache.custos.user.profile.service.GroupToGroupMembership) returns (org.apache.custos.user.profile.service.Status) {
        option (google.api.http) = {
           post: "/group-management/v1.0.0/group/membership"
         };

    }
    rpc removeChildGroupFromParentGroup (org.apache.custos.user.profile.service.GroupToGroupMembership) returns (org.apache.custos.user.profile.service.Status) {

        option (google.api.http) = {
           delete: "/group-management/v1.0.0/group/membership"
         };
    }

    rpc getAllGroupsOfUser (org.apache.custos.user.profile.service.UserProfileRequest) returns (org.apache.custos.user.profile.service.GetAllGroupsResponse) {

        option (google.api.http) = {
           get: "/group-management/v1.0.0/user/group/memberships"
         };
    }

    rpc getAllParentGroupsOfGroup (org.apache.custos.user.profile.service.GroupRequest) returns (org.apache.custos.user.profile.service.GetAllGroupsResponse) {
        option (google.api.http) = {
           get: "/group-management/v1.0.0/groups/memberships"
         };

    }


    rpc getAllChildUsers(org.apache.custos.user.profile.service.GroupRequest) returns (org.apache.custos.user.profile.service.GetAllUserProfilesResponse) {
        option (google.api.http) = {
           get: "/group-management/v1.0.0/user/group/memberships/child"
         };

    }
    rpc getAllChildGroups(org.apache.custos.user.profile.service.GroupRequest) returns (org.apache.custos.user.profile.service.GetAllGroupsResponse) {
        option (google.api.http) = {
           get: "/group-management/v1.0.0/groups/memberships/child"
         };

    }
    rpc changeUserMembershipType (org.apache.custos.user.profile.service.GroupMembership) returns (org.apache.custos.user.profile.service.Status) {
        option (google.api.http) = {
           put: "/group-management/v1.0.0/user/group/membership"
         };

    }
    rpc hasAccess(org.apache.custos.user.profile.service.GroupMembership) returns (org.apache.custos.user.profile.service.Status) {
        option (google.api.http) = {
           get: "/group-management/v1.0.0/user/group/access"
         };

    }

    rpc addGroupMembershipType(org.apache.custos.user.profile.service.UserGroupMembershipTypeRequest) returns (org.apache.custos.user.profile.service.Status) {
        option (google.api.http) = {
           post: "/group-management/v1.0.0/user/group/membership/type"
         };

    }

    rpc removeUserGroupMembershipType(org.apache.custos.user.profile.service.UserGroupMembershipTypeRequest) returns (org.apache.custos.user.profile.service.Status) {
        option (google.api.http) = {
           delete: "/group-management/v1.0.0/user/group/membership/type"
         };

    }


}




